src/test/deca/context/valid/non_provided/affectation.deca
// Description:
//    Programme minimaliste utilisant la déclaration et l'affectation
//
// Resultats:
//
//
// Historique:
//    cree le 10/01/2020

{

	int a = 5;
	int b;


	b = 7;
	b = a;
}
